--- a/Project_1/HTML/index.html
+++ b/Project_1/HTML/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="\CSS\style.css">
+    <link rel="stylesheet" href="CSS\style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div class="section">
         <div class="video-content">
             <video autoplay muted loop id="myVideo">
-                <source src="\Video\MADRUGADA-Tulio-Crepaldi-2018.mp4" type="video/mp4">
+                <source src="Video\MADRUGADA-Tulio-Crepaldi-2018.mp4" type="video/mp4">
               </video>
         </div>
         <div class="container">
